# CTI-Daily-Briefing

./: .env.example  .gitignore  claude.md  feeds.yaml  pyproject.toml  requirements.txt
.github/workflows/: daily_briefing.yml
briefings/: 2026-05-17.md  2026-07-04.md  2026-07-05.md  2026-07-06.md  2026-07-07.md  2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-11.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md
db/: schema.sql  threats.sqlite
obsidian_vault/CTI/Daily/: 2026-05-17.md
tests/: test_dedup.py  test_extract_cves.py  test_ingest.py  test_json_extract.py  test_score.py  test_state.py
tools/: alert_immediate.py  cluster.py  composer.py  daily_run.py  db.py  env_validate.py  epss_lookup.py  extract_cves.py  github_commit.py  health_check.py  kev_check.py  llm_triage.py  logging_config.py  maintenance.py  mitigation_author.py  mitre_data.py  mitre_map.py  nvd_lookup.py  obsidian_write.py  ollama_client.py  overrides.py  rag.py  rate_limit.py  rss_ingest.py  safe_prompt.py  sample.py  score.py  sector_context.py  send_email.py  state.py  tz.py
