[project]
name = "cti-briefing"
version = "4.0.0"
description = "Local AI CTI pipeline for energy + healthcare daily briefings"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
